test_redis_integration_per_route.yaml
static_resources:
  listeners:
  - name: main_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/nocache"
                route:
                  cluster: backend_service
                typed_per_filter_config:
                  envoy.filters.http.global_cache:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.global_cache.v3.GlobalCachePerRoute
                    disabled: true
              - match:
                  prefix: "/query"
                route:
                  cluster: backend_service
                typed_per_filter_config:
                  envoy.filters.http.global_cache:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.global_cache.v3.GlobalCachePerRoute
                    overrides:
                      cache_key:
                        include_query_params: { value: false }
              - match:
                  prefix: "/ttl"
                route:
                  cluster: backend_service
                typed_per_filter_config:
                  envoy.filters.http.global_cache:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.global_cache.v3.GlobalCachePerRoute
                    overrides:
                      default_ttl: { seconds: 1 }
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service
          http_filters:
          - name: envoy.filters.http.global_cache
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.global_cache.v3.GlobalCache
              single_flight_timeout:
                seconds: 5
              cache_backend:
                redis:
                  cluster_name: redis_cluster
                  key_prefix: "envoy:test:"
                  op_timeout:
                    seconds: 1
                  enable_cluster_mode: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: backend_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080

  - name: redis_cluster
    connect_timeout: 1s
    type: STATIC
    lb_policy: MAGLEV
    load_assignment:
      cluster_name: redis_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7000
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7001
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7002
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7003
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7004
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7005
    health_checks:
    - timeout: 1s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      custom_health_check:
        name: envoy.health_checkers.redis
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.health_checkers.redis.v3.Redis

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
